# Memory-Leak-Performance-Analyzer

./: CMakeLists.txt  README.md
docs/: INTERNSHIP_REPORT.md
include/mlpa/analyzers/: Analyzers.h
include/mlpa/core/: AnalysisResult.h  Analyzer.h  Issue.h
include/mlpa/parser/: AnalyzerFrontend.h
include/mlpa/reporting/: Reporter.h
samples/: intentional_issues.cpp
src/analyzers/: MemorySafetyAnalyzer.cpp  ModernCppAnalyzer.cpp  PerformanceAnalyzer.cpp
src/metrics/: MetricsAnalyzer.cpp
src/parser/: AnalyzerFrontend.cpp
src/reporting/: HtmlReporter.cpp  JsonReporter.cpp
src/tool/: main.cpp
tests/: smoke_test.sh
